--- a/index.html
+++ b/index.html
@@ -69,22 +69,22 @@
       <p>Advanced spatial omics workflows combining spatial information with transcriptomic profiles to understand tissue organization and cellular context.</p>
     </div>
     <div class="card">
-      <img src="images/bulkRNA.jpg" alt="Bulk RNA-seq" style="width:100%;border-radius:10px;">
+      <img src="images/bulkRNA.png" alt="Bulk RNA-seq" style="width:100%;border-radius:10px;">
       <h3>Bulk RNA-seq & Differential Expression</h3>
       <p>Robust processing, alignment, quantification, and differential expression analysis for bulk RNA-seq experiments with publication-ready outputs.</p>
     </div>
     <div class="card">
-      <img src="images/multiomics.jpg" alt="Multi-omics integration" style="width:100%;border-radius:10px;">
+      <img src="images/multiomics.png" alt="Multi-omics integration" style="width:100%;border-radius:10px;">
       <h3>Multi-Omics Integration</h3>
       <p>Integration of genomics, transcriptomics, proteomics, and other omics datasets to uncover complex biological insights.</p>
     </div>
     <div class="card">
-      <img src="images/workflows.jpg" alt="Reproducible workflows" style="width:100%;border-radius:10px;">
+      <img src="images/workflows.png" alt="Reproducible workflows" style="width:100%;border-radius:10px;">
       <h3>Reproducible, Publication-Ready Workflows</h3>
       <p>Transparent, well-documented pipelines designed to ensure reproducibility, traceability, and confidence in published results.</p>
     </div>
     <div class="card">
-      <img src="images/Biologicalinterpretation.jpg" alt="Biological interpretation" style="width:100%;border-radius:10px;">
+      <img src="images/Biologicalinterpretation.png" alt="Biological interpretation" style="width:100%;border-radius:10px;">
       <h3>Biological Interpretation & Reporting</h3>
       <p>Clear, biologically meaningful reports with figures, pathway analysis, and actionable insights tailored to your research goals.</p>
     </div>
@@ -95,32 +95,32 @@
   <h2>Why Work With Oxford Omicline</h2>
   <div class="grid">
     <div class="card">
-      <img src="images/Highquality.jpg" alt="High Quality Results" style="width:100%;border-radius:10px;">
+      <img src="images/Highquality.png" alt="High Quality Results" style="width:100%;border-radius:10px;">
       <h3>High Quality Results</h3>
       <p>Each project is thoroughly documented to ensure accuracy, reproducibility, and scientific rigor.</p>
     </div>
     <div class="card">
-      <img src="images/Transparent.jpg" alt="High Quality Results" style="width:100%;border-radius:10px;">
+      <img src="images/Transparent.png" alt="High Quality Results" style="width:100%;border-radius:10px;">
       <h3>Transparent Processes</h3>
       <p>We clearly communicate analysis strategies before starting and report all methods and parameters used.</p>
     </div>
     <div class="card">
-      <img src="images/Multi-Platform.jpg" alt="High Quality Results" style="width:100%;border-radius:10px;">
+      <img src="images/Multi-Platform.png" alt="High Quality Results" style="width:100%;border-radius:10px;">
       <h3>Multi-Platform Support</h3>
       <p>Expertise across multiple sequencing platforms, including Illumina, ONP, and PacBio technologies.</p>
     </div>
     <div class="card">
-      <img src="images/secure.jpg" alt="High Quality Results" style="width:100%;border-radius:10px;">
+      <img src="images/secure.png" alt="High Quality Results" style="width:100%;border-radius:10px;">
       <h3>Data Security Guaranteed</h3>
       <p>Secure high-performance computing infrastructure with encryption and strict access controls.</p>
     </div>
     <div class="card">
-      <img src="images/Industry-Leading.jpg" alt="High Quality Results" style="width:100%;border-radius:10px;">
+      <img src="images/Industry-Leading.png" alt="High Quality Results" style="width:100%;border-radius:10px;">
       <h3>Industry-Leading Expertise</h3>
       <p>A strong in-house bioinformatics team supported by an extensive scientific collaboration network.</p>
     </div>
     <div class="card">
-      <img src="images/fast.jpg" alt="High Quality Results" style="width:100%;border-radius:10px;">
+      <img src="images/fast.png" alt="High Quality Results" style="width:100%;border-radius:10px;">
       <h3>Fast Turnaround Time</h3>
       <p>Efficient pipelines and optimized workflows to deliver high-quality results quickly.</p>
     </div>
@@ -139,10 +139,10 @@
 <section class="team">
   <h2>Meet the Team</h2>
   <div class="grid">
-    <div class="card"><img src="https://images.unsplash.com/photo-1537368910025-700350fe46c7" alt="Team member"><h3>Dr Muhammad Waqas Ali </h3><p>Leadership in omics research and strategy.</p></div>
-    <div class="card"><img src="https://images.unsplash.com/photo-1524504388940-b1c1722653e1" alt="Team member"><h3>Bioinformatics Lead</h3><p>Expert in computational biology and data analysis.</p></div>
-    <div class="card"><img src="https://images.unsplash.com/photo-1544005313-94ddf0286df2" alt="Team member"><h3>Omics Scientist</h3><p>Specialist in experimental and multi‑omics workflows.</p></div>
-    <div class="card"><img src="https://images.unsplash.com/photo-1547425260-76bcadfb4f2c" alt="Team member"><h3>Training Lead</h3><p>Delivering professional education and workshops.</p></div>
+    <div class="card"><img src="images/waqas.png" alt="Team member"><h3>Dr Muhammad Waqas Ali CEO & Co-Founder</h3><p>Dr Muhammad Waqas Ali is a molecular biologist and bioinformatician with a PhD from the University of Birmingham. His research background spans molecular biology, genomics, and data-driven biological discovery. Dr Ali founded Oxford Omicline to bridge rigorous computational analysis with clear biological interpretation, supporting high-impact research and translational science.</p></div>
+    <div class="card"><img src="images/shahida.png" alt="Team member"><h3>Dr Shahida Rafique Senior Bioinformatician</h3><p>Dr Shahida Rafique is a Research Fellow at University College London with extensive experience in RNA biology, transcriptomics, and metabolomics. Her work focuses on the analysis of complex high-throughput datasets to uncover regulatory mechanisms and biological pathways underlying health and disease.</p></div>
+    <div class="card"><img src="images/flack.png" alt="Team member"><h3>Dr Friederike Flack Omics Scientist</h3><p>Dr Friederike Flack graduated from the University of Copenhagen and specialises in multi-omics data analysis. She has extensive experience in integrative omics workflows and statistical analysis, supporting data interpretation across diverse biological systems.</p></div>
+    <div class="card"><img src="images/james.png" alt="Team member"><h3>James Johnston Training Lead</h3><p>James Johnston is a training specialist with a degree from the University of Michigan. He leads Oxford Omicline’s training programmes, focusing on accessible, hands-on bioinformatics education for students and researchers at all levels.</p></div>
   </div>
 </section>
 
