--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     </div>
 
     <div class="card">
-      <img src="Transparent.png" alt="Transparent processes">
+      <img src="Multi-Platform.jpeg" alt="Transparent processes">
       <h3>Transparent Processes</h3>
       <p>Clear communication of methods, parameters, and analytical decisions.</p>
     </div>
