--- a/index.html
+++ b/index.html
@@ -1,50 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Oxford Omicline | Omics Research & Training</title>
-  <meta name="description" content="Oxford Omicline provides omics research services, bioinformatics analysis, and professional training." />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Oxford Omicline | Omics Research & Training</title>
+  <meta name="description" content="Oxford Omicline provides omics research services, bioinformatics analysis, and professional training." />
 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 
-  <style>
-  /* Add this to your style section to handle the image sizing */
-  .hero-image-container {
-    width: 100%;
-    max-width: 900px; /* Limits the width so it doesn't get too giant on big screens */
-    margin: 0 auto 40px; /* Centers it and adds space below */
-    display: block;
-  }
-  
-  .hero-image-container img {
-    width: 100%;
-    height: auto;
-    border-radius: 12px; /* Optional: gives it nice rounded corners to match your cards */
-    box-shadow: 0 4px 20px rgba(0,0,0,0.1); /* Optional: makes it "pop" slightly */
-  }
-
-  /* Adjust the header padding since the image now provides the bulk of the visual height */
-  header { 
-    color:#0f172a; 
-    padding: 40px 20px 80px; /* Reduced top padding */
-    text-align:center; 
-    background: #ffffff; /* Clean white background instead of the image */
-  }
-</style>
+  <style>
+    body { margin:0; font-family:Inter, sans-serif; color:#1f2937; line-height:1.6; }
+    header { color:#0f172a; padding:120px 20px; text-align:center; }
+    header h1 { font-size:2.5rem; margin-bottom:10px; }
+    header p { max-width:700px; margin:0 auto 30px; }
+    section { padding:70px 20px; max-width:1100px; margin:auto; }
+    h2 { font-size:2rem; margin-bottom:30px; text-align:center; }
+    .grid { display:grid; grid-template-columns:repeat(auto-fit, minmax(250px,1fr)); gap:30px; }
+    .card { background:#f8fafc; padding:30px; border-radius:12px; box-shadow:0 10px 25px rgba(0,0,0,.05); }
+    .card img { width:100%; border-radius:10px; }
+    .why { background:#f1f5f9; }
+    footer { background:#020617; color:#cbd5f5; padding:40px 20px; text-align:center; }
+    footer a { color:#22c55e; text-decoration:none; margin:0 10px; }
+  </style>
 </head>
 
 <body>
 
-<header>
-  <div class="hero-image-container">
-    <img src="hero-omics.png" alt="Omics Research Visualization">
-  </div>
-
-  <h1>Turning Complex Omics Data into Clear Biological Insight</h1>
-  <p>Oxford Omicline provides rigorous, reproducible bioinformatics and multi-omics analysis to support academic research, translational science, and industry innovation.</p>
+<header style="background-image: linear-gradient(rgba(255,255,255,0.75), rgba(255,255,255,0.75)), url('hero-omics.png'); background-size: cover; background-position: center;">
+  <h1>Turning Complex Omics Data into Clear Biological Insight</h1>
+  <p>Oxford Omicline provides rigorous, reproducible bioinformatics and multi-omics analysis to support academic research, translational science, and industry innovation.</p>
 </header>
 
 <section id="about">
