--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@ For collaborations, consultancy enquiries, or training opportunities:
   </div>
 
   <div class="location">
-    Old Road Campus, Oxford, United Kingdom
+    Old Road Campus, Oxford, UK
   </div>
 </div>
 </footer>
