--- a/index.html
+++ b/index.html
@@ -308,14 +308,12 @@ Specialised course focused on bulk RNA-seq, single-cell RNA-seq, spatial transcr
     </div>
 
     <div class="card">
-      <img src="Multi-Platform.jpeg" alt="Transparent processes">
       <img src="Transparent.png" alt="Transparent processes">
       <h3>Transparent Processes</h3>
       <p>Clear communication of methods, parameters, and analytical decisions.</p>
     </div>
 
     <div class="card">
-      <img src="Multi-Platform.png" alt="Multi platform support">
       <img src="Multi-Platform.jpeg" alt="Multi platform support">
       <h3>Multi-Platform Support</h3>
       <p>Experience across Illumina, ONT, and PacBio sequencing technologies.</p>
@@ -349,25 +347,25 @@ Specialised course focused on bulk RNA-seq, single-cell RNA-seq, spatial transcr
 
 <div class="card">
 <img src="waqas.png">
-<h3>Dr Muhammad Waqas Ali CEO & Co-Founder</h3>
+<h3>Dr Muhammad Waqas Ali - CEO & Co-Founder</h3>
 <p>Muhammad is a molecular biologist and bioinformatician with a PhD from the University of Birmingham. His research background spans molecular biology, genomics, and data-driven biological discovery. He founded Oxford Omicline to bridge rigorous computational analysis with clear biological interpretation, supporting high-impact research and translational science.</p>
 </div>
 
 <div class="card">
 <img src="flack.png">
-<h3>Dr Friederike Flack Omics Scientist</h3>
+<h3>Dr Friederike Flack - Omics Scientist</h3>
 <p>Friederike joined Oxford Omicline in 2025 as a Scientist. She graduated from the University of Copenhagen and specialises in multi-omics data analysis. She has extensive experience in integrative omics workflows and statistical analysis, supporting data interpretation across diverse biological systems.</p>
 </div>
 
 <div class="card">
 <img src="shahida_1.png">
-<h3>Dr Shahida Rafique Senior Bioinformatician</h3>
-<p>Before joining Oxford Omicline, Shahida worked as a Research Fellow at London School of Hygiene & Tropical Medicine with extensive experience in RNA biology, transcriptomics, and metabolomics. Her work focuses on the analysis of complex high-throughput datasets to uncover regulatory mechanisms and biological pathways underlying health and disease.</p>
+<h3>Dr Shahida Rafique - Microbial Bioinformatics Lead</h3>
+<p>Before joining Oxford Omicline, Shahida was a Research Fellow at University College London (UCL) and a specialist in microbial bioinformatics with expertise in WGS, RNA sequencing, metabolomics, and genomic epidemiology. She leads the reproducible analysis of high-throughput sequencing data, transforming complex datasets into reliable, decision-ready insights for research and public-health applications.</p>
 </div>
   
 <div class="card">
 <img src="james.png">
-<h3>James Johnston Training Lead</h3>
+<h3>James Johnston - Training Lead</h3>
 <p>James is a training specialist with a degree from the University of Michigan. He leads Oxford Omicline’s training programmes, focusing on accessible, hands-on bioinformatics education for students and researchers at all levels.</p>
 </div>
 
