--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@ We also provide customised workshops for research groups and corporate teams.
 
 <div class="card">
 <img src="waqas1.jpg">
-<h3>Dr Muhammad Waqas Ali - CEO & Co-Founder</h3>
+<h3>Dr Muhammad Waqas Ali - CEO & Founder</h3>
 <p>Muhammad is a molecular biologist and bioinformatician with a PhD from the University of Birmingham. His research background spans molecular biology, genomics, and data-driven biological discovery. He founded Oxford Omicline to bridge rigorous computational analysis with clear biological interpretation, supporting high-impact research and translational science.</p>
 </div>
 
